# health_ai_agent

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
health_ai_agent/: config.py  main.py
health_ai_agent/api/: ai.py  health.py  patients.py
health_ai_agent/schemas/: ai.py  patient.py
health_ai_agent/scripts/: create_tables.py  load_data.py
health_ai_agent/services/: __init__.py  ai_services.py  database.py
